--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@ant-design/pro-layout": "^6.5.0",
     "@umijs/preset-react": "1.x",
     "antd": "^4.10.3",
+    "antd-dayjs-webpack-plugin": "^1.0.6",
     "classnames": "^2.2.6",
+    "dayjs": "^1.10.4",
     "enquire-js": "^0.2.1",
     "nprogress": "^0.2.0",
+    "path-to-regexp": "^6.2.0",
     "umi": "^3.3.3",
     "uuid": "^8.3.2"
   },
